# githubdl

./: .gitignore  README.md  pyproject.toml
src/githubdl/: __init__.py  api.py  file_processing.py  request_processing.py  url_helpers.py  url_processing.py
tests/: conftest.py  test_api.py  test_download_location.py  test_url_helpers.py  test_urls.py
